# Concentric-Tube-Robot

./: .gitignore  README.md
CTR Kinematics/: CTR Kinematics.sln
CTR Kinematics/CTR Kinematics/: BC.h  BVP.h  CTR Kinematics.vcxproj  CTR Kinematics.vcxproj.filters  CTR.cpp  CTR.h  Controller.cpp  Controller.h  Kinematics.cpp  Kinematics.h  RobotController.cpp  RobotController.h  main.cpp
CTR Kinematics/CTR Kinematics/src/: BVP.cpp  CTR.cpp  CTR.h  Kinematics.cpp  Kinematics.h  RobotController.cpp  Tube.h  main.cpp
ROS2_ws/: Commands.txt
ROS2_ws/src/ctr_kinematics/: CMakeLists.txt  package.xml
ROS2_ws/src/ctr_kinematics/action/: Kinematics.action  RobotTeleop.action
ROS2_ws/src/ctr_kinematics/include/ctr_kinematics/: BC.h  CTRKinematicsController.h  Controller.h  GalilMotionController.h  GalilMotors.h  Kinematics.h  MyTest.h  galil_controller.h  motors.h
ROS2_ws/src/ctr_kinematics/msg/: RobotConfig.msg
ROS2_ws/src/ctr_kinematics/src/: BC.cpp  BVP.cpp  CTR.cpp  Controller.cpp  Kinematics.cpp  MyTest.cpp  ctr_node.cpp  galil_node.cpp  kinematics_node.cpp  test_node.cpp
ROS2_ws/src/ctr_kinematics/src/CTR/: CTR.cpp  CTRKinematicsController.cpp  Kinematics.cpp  Tube.cpp
ROS2_ws/src/ctr_kinematics/src/Galil/: GalilMotionController.cpp  GalilMotors.cpp  galil_controller.cpp  motors.cpp
ROS2_ws/src/ctr_kinematics/srv/: DriveMotors.srv  EnableActions.srv  InitMotors.srv  SolveKinematics.srv
ROS2_ws/src/ctr_sim/: CMakeLists.txt  package.xml
ROS2_ws/src/ctr_sim/action/: MotorCalib.action
ROS2_ws/src/ctr_sim/include/ctr_sim/: motors.h  visibility_control.h
ROS2_ws/src/ctr_sim/launch/: setup.launch.py
ROS2_ws/src/ctr_sim/msg/: KeyInput.msg  MotorPos.msg  RobotPos.msg
ROS2_ws/src/ctr_sim/src/: galil_controller.cpp  galil_node.cpp  key_input_node.cpp  kinematics_node.cpp  motor_setup_node.cpp  motors.cpp  teleop_node.cpp
ROS2_ws/src/ctr_sim/srv/: MotorConnect.srv  MotorJog.srv  MotorSpeed.srv
